# sprd_sign_web

./: .gitignore  CMakeLists.txt  README.MD  build.sh  get-raw-image.c  index.html
.github/workflows/: build-deploy.yml
avbtool/: index.html  worker.js
config/: rsa2048_0.pem  rsa2048_0_pub.pem  rsa2048_1.pem  rsa2048_1_pub.pem  rsa2048_2.pem  rsa2048_2_pub.pem  rsa2048_devkey_pub.pem
insertheader/: imgheaderinsert.c
legacy/: generate_sign_script_for_vbmeta.js  generate_sign_script_for_vbmeta.wasm  get-raw-image.js  get-raw-image.wasm  imgheaderinsert.js  imgheaderinsert.wasm  sprd_sign.data  sprd_sign.js  sprd_sign.wasm
openssl-cmake/: CMakeLists.txt
sprd_sign/: start.c
sprd_sign/common/verify/inc/: sprdsec_header.h
sprd_sign/common/verify/src/: sprd_verify.c
web/: index.html
web/avbtool/: avbtool.py  generate_sign_script_for_vbmeta.py  index.html  sign_image.py
web/legacy/: index.html  worker.js
